fix wrap issue

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -948,7 +948,7 @@ input[type='radio'] {
 	font-size: 1.4em;
 }
 
-.wrap {
+.wr {
 	width: 400px;
 	margin: .5em auto;
 	height: 300px;
